--- a/src/index.pug
+++ b/src/index.pug
@@ -4,6 +4,7 @@ block body
   //include modules/preloader/preloader
   include modules/about/about
   include modules/courses/courses
+  include modules/yearPrograms/yearPrograms
   include modules/modules/modules
   include modules/faq/faq
 
