--- a/src/modules/about/about.pug
+++ b/src/modules/about/about.pug
@@ -1,11 +1,14 @@
 .about
-  h2.about__title: span О ШКОЛЕ
-  .about__content
+  .c
+    h2.title.about__title: span: span О ШКОЛЕ
     .about__text Школа #[b NEWARTDOM] собрала под своим куполом профессионалов с многолетним опытом преподавания в сфере теории и практики современного искусства. Мы предлагаем качественное профильное образование, которое вы можете получить не выходя из дома. Оно станет отличной базой для ваших последующих творческих и научных исканий.
     .about__principes
-      .about__itemsHeader Наши#[br]принципы:
+      .about__itemsHeader Наши#[br]преимущества:
       img.about__decor2(src='modules/about/img/about-decor2.jpg')
-
+      //.about__itemsText
+      //  p Школа #[b NEWARTDOM] собрала под своим куполом профессионалов с многолетним опытом преподавания в сфере теории и практики современного искусства. Мы предлагаем качественное профильное образование, которое вы можете получить не выходя из дома. Оно станет отличной базой для ваших последующих творческих и научных исканий.
+      //  p Школа #[b NEWARTDOM] собрала под своим куполом профессионалов с многолетним опытом преподавания в сфере теории и практики современного искусства. Мы предлагаем качественное профильное образование, которое вы можете получить не выходя из дома. Оно станет отличной базой для ваших последующих творческих и научных исканий.
+      //  p Школа #[b NEWARTDOM] собрала под своим куполом профессионалов с многолетним опытом преподавания в сфере теории и практики современного искусства. Мы предлагаем качественное профильное образование, которое вы можете получить не выходя из дома. Оно станет отличной базой для ваших последующих творческих и научных исканий.
       .about__items
         .about__item
           +svg('success')
