--- a/src/modules/course/course.pug
+++ b/src/modules/course/course.pug
@@ -1,9 +1,9 @@
 .course
   .course__container
-    h1.course__title: span: span
+    h1.title.course__title: span: span
       | FREE-RUN STILL-LIFE
       | FREE-RUN STILL-LIFE FREE-RUN STILL-LIFE
-  .course__row
+  .course__row.course__row--withGallery
     .course__container
       .course__placeholder
       .course__header Информация#[br]о курсе:
