--- a/src/modules/courses/courses.pug
+++ b/src/modules/courses/courses.pug
@@ -8,29 +8,89 @@
     .courses__header: span ART ПРАКТИКИ
     .courses__header: span ИСТОРИЯ И ТЕОРИЯ
     .courses__header: span ДИЗАЙН
-  .c Цель образовательной программы #[b(style='color:#ec3434;') NEWARTDOM] — познакомить студентов с инструментами современного искусства и подготовить их к интеграции в глобальную художественную среду.
+  .c: .courses__text2 Цель образовательной программы #[b(style='color:#ec3434;') NEWARTDOM] — познакомить студентов с инструментами современного искусства и подготовить их к интеграции в глобальную художественную среду.
   .courses__items
     .cards
-      .cards__item: .cards__card(style='background-image:url(images/01.jpg)') Скетчинг
-      .cards__item: .cards__card(style='background-image:url(images/02.jpg)') Free-run#[br]Still-life
-      .cards__item: .cards__card(style='background-image:url(images/03.jpg)') Скетчинг
-      .cards__item: .cards__card(style='background-image:url(images/04.jpg)') Free-run#[br]Still-life
-      .cards__item: .cards__card(style='background-image:url(images/05.jpg)') Скетчинг
-      .cards__item: .cards__card(style='background-image:url(images/06.jpg)') Free-run#[br]Still-life
-      .cards__item: .cards__card(style='background-image:url(images/07.jpg)') Скетчинг
-      .cards__item: .cards__card(style='background-image:url(images/08.jpg)') Free-run#[br]Still-life
-      .cards__item: .cards__card(style='background-image:url(images/09.jpg)') Скетчинг
-      .cards__item: .cards__card(style='background-image:url(images/10.jpg)') Free-run#[br]Still-life
-      .cards__item: .cards__card(style='background-image:url(images/09.jpg)') Скетчинг
-      .cards__item: .cards__card(style='background-image:url(images/10.jpg)') Free-run#[br]Still-life
-      .cards__item: .cards__card(style='background-image:url(images/09.jpg)') Скетчинг
-      .cards__item: .cards__card(style='background-image:url(images/10.jpg)') Free-run#[br]Still-life
-      .cards__item: .cards__card(style='background-image:url(images/09.jpg)') Скетчинг
-      .cards__item: .cards__card(style='background-image:url(images/10.jpg)') Free-run#[br]Still-life
-      .cards__item: .cards__card(style='background-image:url(images/09.jpg)') Скетчинг
-      .cards__item: .cards__card(style='background-image:url(images/10.jpg)') Free-run#[br]Still-life
-      .cards__item: .cards__card(style='background-image:url(images/09.jpg)') Скетчинг
-      .cards__item: .cards__card(style='background-image:url(images/10.jpg)') Free-run#[br]Still-life
+      .cards__item
+        a.cards__card(href='#')
+          .cards__img(style='background-image:url(images/01.jpg)')
+          |Скетчинг
+      .cards__item
+        a.cards__card(href='#')
+          .cards__img(style='background-image:url(images/02.jpg)')
+          |Free-run#[br]Still-life
+      .cards__item
+        a.cards__card(href='#')
+          .cards__img(style='background-image:url(images/03.jpg)')
+          |Скетчинг
+      .cards__item
+        a.cards__card(href='#')
+          .cards__img(style='background-image:url(images/04.jpg)')
+          |Free-run#[br]Still-life
+      .cards__item
+        a.cards__card(href='#')
+          .cards__img(style='background-image:url(images/05.jpg)')
+          |Скетчинг
+      .cards__item
+        a.cards__card(href='#')
+          .cards__img(style='background-image:url(images/06.jpg)')
+          |Free-run#[br]Still-life
+      .cards__item
+        a.cards__card(href='#')
+          .cards__img(style='background-image:url(images/07.jpg)')
+          |Скетчинг
+      .cards__item
+        a.cards__card(href='#')
+          .cards__img(style='background-image:url(images/08.jpg)')
+          |Free-run#[br]Still-life
+      .cards__item
+        a.cards__card(href='#')
+          .cards__img(style='background-image:url(images/09.jpg)')
+          |Скетчинг
+      .cards__item
+        a.cards__card(href='#')
+          .cards__img(style='background-image:url(images/10.jpg)')
+          |Free-run#[br]Still-life
+      .cards__item
+        a.cards__card(href='#')
+          .cards__img(style='background-image:url(images/09.jpg)')
+          |Скетчинг
+      .cards__item
+        a.cards__card(href='#')
+          .cards__img(style='background-image:url(images/10.jpg)')
+          |Free-run#[br]Still-life
+      .cards__item
+        a.cards__card(href='#')
+          .cards__img(style='background-image:url(images/09.jpg)')
+          |Скетчинг
+      .cards__item
+        a.cards__card(href='#')
+          .cards__img(style='background-image:url(images/10.jpg)')
+          |Free-run#[br]Still-life
+      .cards__item
+        a.cards__card(href='#')
+          .cards__img(style='background-image:url(images/09.jpg)')
+          |Скетчинг
+      .cards__item
+        a.cards__card(href='#')
+          .cards__img(style='background-image:url(images/10.jpg)')
+          |Free-run#[br]Still-life
+      .cards__item
+        a.cards__card(href='#')
+          .cards__img(style='background-image:url(images/09.jpg)')
+          |Скетчинг
+      .cards__item
+        a.cards__card(href='#')
+          .cards__img(style='background-image:url(images/10.jpg)')
+          |Free-run#[br]Still-life
+      .cards__item
+        a.cards__card(href='#')
+          .cards__img(style='background-image:url(images/09.jpg)')
+          |Скетчинг
+      .cards__item
+        a.cards__card(href='#')
+          .cards__img(style='background-image:url(images/10.jpg)')
+          |Free-run#[br]Still-life
 
   .courses__more
     button ЕЩЕ
