--- a/src/modules/courses/courses.styl
+++ b/src/modules/courses/courses.styl
@@ -1,4 +1,5 @@
 .courses
+  margin-bottom: 115px
   &__title
     position: relative;
     font-size: 60px
@@ -74,7 +75,11 @@
             margin-top: 8px;
 
   &__text
+    visibility: hidden;
     letter-spacing 0.01em
+
+  &__text2
+    visibility: hidden;
 
   &__headers
     margin: 70px 0
@@ -105,6 +110,7 @@
       background: #ededed
 
     span
+      visibility: hidden;
       display: block;
       position: relative;
       white-space nowrap
@@ -151,14 +157,14 @@
         position: static
         z-index auto
 
-
   &__more
     text-align: center;
     margin: 32px 0
 
-    button
+    button, a
       position: relative;
       font-weight: bold;
+      text-decoration: none;
 
       &:before
         content: ''
