--- a/src/modules/customModule/customModule.styl
+++ b/src/modules/customModule/customModule.styl
@@ -27,6 +27,7 @@
     z-index: 1
 
   &__title
+    visibility: hidden;
     font-size: 80px
     line-height: 85px
     color: #ffffff
@@ -38,6 +39,7 @@
       margin-bottom: 40px
 
   &__button
+    visibility: hidden;
     width: 220px
     height: 80px
     line-height: 80px;
