--- a/src/modules/modules/modules.pug
+++ b/src/modules/modules/modules.pug
@@ -1,6 +1,7 @@
 .modules.cWide
+  h2.title.modules__title: span: span ОБРАЗОВАТЕЛЬНЫЕ МОДУЛИ
   .modules__top
-    h2.modules__title
+    h2.modules__header
       | УЗНАЙ ВСЕ#[br]
       | О СОВРЕМЕННОМ#[br]
       | ИСКУССТВЕ
