--- a/src/modules/modulesList/modulesList.styl
+++ b/src/modules/modulesList/modulesList.styl
@@ -4,6 +4,7 @@
     margin: 60px 0 60px
 
   &__title
+    visibility: hidden;
     height: 130px
     background: #f6f6f6
     margin-bottom: 5px
@@ -52,6 +53,7 @@
       background-size: 57%;
 
   &__header
+    visibility: hidden;
     font-size: 80px
     line-height: 85px
     margin-left: -14px
