--- a/src/modules/students/students.styl
+++ b/src/modules/students/students.styl
@@ -13,6 +13,7 @@
       height: 70px
 
     span
+      visibility: hidden;
       font-size: 54px
       color: #ec3434
       position: relative;
@@ -56,6 +57,7 @@
     align-items flex-start
 
   &__img
+    visibility: hidden;
     margin-right: 48px
     +media('md')
       margin: 0
@@ -65,6 +67,7 @@
     img
       max-width 100%
       height: auto;
+      border-radius: 50%
 
   &__content
     flex: 1
@@ -73,6 +76,7 @@
       padding-top: 3px
 
   &__name
+    visibility: hidden;
     font-size: 30px
     font-weight: bold;
     +media('md')
@@ -80,6 +84,7 @@
       padding-left: 105px
 
   &__description
+    visibility: hidden;
     margin-top: 4px
     font-size: 18px
     font-weight: bold;
@@ -90,6 +95,7 @@
       padding-left: 105px
 
   &__text
+    visibility: hidden;
     margin-top: 24px
     font-size: 30px
     line-height: 1.4
