--- a/src/style.styl
+++ b/src/style.styl
@@ -50,5 +50,6 @@
 @import "modules/mentors/mentors.styl";
 @import "modules/history/history.styl";
 @import "modules/students/students.styl";
+@import "modules/yearPrograms/yearPrograms.styl";
 
 @import "stylus/blocks/wpcf7.styl";
