--- a/src/modules/about/about.styl
+++ b/src/modules/about/about.styl
@@ -6,90 +6,56 @@
     margin-bottom: 67px
 
   &__title
-    position: absolute;
-    left: 50%
-    margin-left: -555px
-    font-size: 60px
-    line-height: 75px
-    font-weight: bold;
-    color: #ffffff
+    margin-bottom: 132px
     +media('md')
-      left: 19px
-      margin-left: 0
-      font-size: 30px
-      line-height: 40px
+      margin-bottom: 57px
 
-    &:before, &:after
-      content: ''
-      position: absolute;
-
-    &:before
-      bottom: -14px;
-      right: -31px;
-      width: 560px
-      height: 40px
-      background: #ec3434
+    &:before // Красная полоса
+      width: 561px;
+      height: 40px;
+      left: -234px;
+      top: 54px;
+      z-index: -1
       +media('md')
-        bottom: -6px;
-        right: -23px;
-        width: 560px;
+        left: -391px;
+        top: 29px;
         height: 20px;
 
-    &:after
-      right: -7px
-      width: 1000px
-      height: 75px
-      background: #1a1616
-      +media('md')
-        right: -5px;
-        height: 40px;
-
-    span
-      position: relative;
-      z-index: 1
-
-      &:before, &:after
-        content: ''
-        position: absolute;
-
-      &:before
-        width: 195px
-        height: 195px
-        background: #ec3434
-        border-radius: 50%
-        top: -59px;
-        left: -13px;
-        z-index: -1
+    & > span
+      &:after // Красный круг
+        width: 196px;
+        height: 196px;
+        top: -57px;
+        left: -14px;
         +media('md')
-          width: 76px
-          height: 76px
-          top: -18px;
-          left: -8px;
+          width: 76px;
+          height: 76px;
+          top: -17px;
+          left: -9px;
 
-      &:after
-        width: 100px
-        height: 5px
-        background: #1a1616
-        left: 100%
-        margin-left: -30px;
-        top: 100%;
-        margin-top: 15px;
+      &:before // Черная полоска
+        width: 100px;
+        height: 5px;
+        left: 266px;
+        top: 91px;
         +media('md')
-          margin-left: -16px;
-          margin-top: 8px;
-
+          left: 131px;
+          top: 46px;
 
   &__content
     margin: 0 auto
-    max-width 1120px
+    max-width 1170px
     padding-top: 207px
     +media('md')
       padding: 98px 20px 0
 
   &__text
+    visibility: hidden;
+    margin-top: 90px
     font-size: 30px
     line-height: 1.4
     +media('md')
+      margin-top: 40px
       font-size: 20px
 
   &__principes
@@ -110,9 +76,10 @@
 
     &--active
       & ^[0]__item:nth-child(n+5)
-        opacity: 1
-        position: relative;
-        visibility: visible;
+        display: block;
+        //opacity: 1
+        //position: relative;
+        //visibility: visible;
 
   &__decor2
     position: absolute;
@@ -129,8 +96,11 @@
       width: auto;
 
   &__itemsHeader
-    font-size: 80px
-    line-height: 75px
+    visibility: hidden;
+    font-size: 60px
+    line-height: 55px
+    //font-size: 80px
+    //line-height: 75px
     position: absolute;
     top: 58px
     left: 0
@@ -142,13 +112,14 @@
       margin-bottom: 26px
 
   &__item
+    visibility: hidden;
     position: relative;
-    width: 560px
+    width: 650px
     padding-left: 60px
     font-size: 23px
     line-height: 33px
     margin-bottom: 29px
-    anim()
+    //anim()
     +media('md')
       width: 100%
       font-size: 16px
@@ -163,10 +134,11 @@
           margin-right: 0
 
     &:nth-child(n+5)
-      visibility: hidden;
-      opacity: 0
-      position: absolute;
-      z-index: -1
+      display: none;
+      //visibility: hidden;
+      //opacity: 0
+      //position: absolute;
+      //z-index: -1
 
     svg
       position: absolute;
@@ -217,4 +189,12 @@
         height: 26px
         +media('md')
           top: 15px
+
+  &__itemsText
+    visibility: hidden;
+    padding-top: 160px
+    font-size: 23px
+    +media('md')
+      padding-top: 0
+      font-size: 16px
 
