--- a/src/modules/books/books.styl
+++ b/src/modules/books/books.styl
@@ -6,6 +6,7 @@
     margin-bottom: 49px
 
   &__title
+    visibility: hidden;
     font-size: 27px
     line-height: 1.35
     font-weight: bold;
@@ -23,6 +24,7 @@
       margin: 0
 
   &__item
+    visibility: hidden;
     width: 50%
     padding: 5px
     +media('md')
