--- a/src/modules/faq/faq.pug
+++ b/src/modules/faq/faq.pug
@@ -1,6 +1,6 @@
 .faq#faq
   .faq__container
-    h2.faq__title: span FAQ
+    h2.title.faq__title: span: span FAQ
     .faq__row
       .faq__items
         .faq__item
