--- a/src/modules/faq/faq.styl
+++ b/src/modules/faq/faq.styl
@@ -21,82 +21,48 @@
     padding: 0px 20px
 
   &__title
-    position: relative;
-    font-size: 60px
-    line-height: 42px
-    font-weight: bold;
-    color: #ffffff
-    margin-bottom: 64px
+    transform translateY(-19px)
+    margin-bottom: 26px
     +media('md')
-      font-size: 30px
-      line-height: 40px
-      margin-bottom: 41px
+      transform translateY(-14px)
+      margin-bottom: 26px
 
-    &:before, &:after
-      content: ''
-      position: absolute;
-
-    &:before
-      right: 100%
-      margin-right: -314px
-      width: 560px
-      height: 40px
-      background: #ec3434
+    &:before // Красная полоса
+      width: 561px;
+      height: 40px;
+      left: -246px;
+      top: 19px;
+      z-index: -1
       +media('md')
-        right: 100%;
-        margin-right: -164px;
-        width: 560px;
+        left: -395px;
+        top: 14px;
         height: 20px;
-        top: 11px;
 
-    &:after
-      top: -16px
-      right: 100%
-      margin-right: -290px
-      width: 1000px
-      height: 75px
-      background: #1a1616
-      +media('md')
-        top: 0px;
-        right: 100%;
-        margin-right: -152px;
-        width: 1000px;
-        height: 41px;
-
-    span
-      position: relative;
-      z-index: 1
-
-      &:before, &:after
-        content: ''
-        position: absolute;
-
-      &:before
-        width: 135px
-        height: 135px
-        background: #ec3434
-        border-radius: 50%
+    & > span
+      &:after // Красный круг
+        width: 135px;
+        height: 135px;
         top: -30px;
-        left: 46px;
-        z-index: -1
+        left: 47px;
         +media('md')
           width: 77px;
           height: 77px;
-          top: -18px;
-          left: 46px;
+          top: -17px;
+          left: 48px;
 
-      &:after
-        width: 100px
-        height: 5px
-        background: #1a1616
-        top: 100%
-        right: 100%
-        margin-right: 113px;
-        margin-top: 32px;
+      &:before // Черная полоска
+        width: 100px;
+        height: 5px;
+        left: -212px;
+        top: 104px;
         +media('md')
-          margin-top: 0;
-          margin-right: -38px;
-          top: -11px;
+          left: -60px;
+          top: -10px;
+
+      & > span
+        margin-right: 150px
+        +media('md')
+          margin-right: 74px
 
   &__row
     display: flex;
@@ -186,6 +152,7 @@
 
 
   &__item
+    visibility: hidden;
     margin-bottom: 20px
     +media('md')
       margin-bottom: 5px
@@ -214,6 +181,7 @@
       margin-top: 46px
 
   &__formHeader
+    visibility: hidden;
     font-size: 80px
     line-height: 85px
     margin-bottom: 35px
@@ -223,11 +191,13 @@
       margin-bottom: 25px
 
   &__input
+    visibility: hidden;
     margin-bottom: 27px
     +media('md')
       margin-bottom: 12px
 
   &__footer
+    visibility: hidden;
     margin-top: 40px
     text-align: right;
     +media('md')
