--- a/src/modules/module/module.styl
+++ b/src/modules/module/module.styl
@@ -11,100 +11,65 @@
       padding: 0 15px
 
   &__title
-    position: relative;
-    font-size: 60px
-    line-height: 80px
-    font-weight: bold;
-    color: #ffffff
-    margin-bottom: 115px;
-    margin-top: -5px
+    margin-bottom: 0;
     +media('md')
-      margin-top: -3px
-      margin-left: 0
-      font-size: 30px
-      line-height: 44px
-      margin-bottom: 50px
+      margin-bottom: 0;
 
-    &:before, &:after
-      content: ''
-      position: absolute;
-
-    &:after
-      right: 100%
-      top: 3px
-      height: 100%
-      width: 1000px
-      background: repeating-linear-gradient(#1a1616 0px, #1a1616 73px, transparent 73px, transparent 80px)
-      z-index: -1
-      +media('md')
-        background: repeating-linear-gradient(#1a1616 0px, #1a1616 37px, transparent 37px, transparent 44px)
-
-    &:before
-      background: #ec3434
+    &:before // Красная полоса
       width: 561px;
       height: 40px;
       left: 345px;
       top: 54px;
+      z-index: -1;
       +media('md')
-        left: 87px;
+        left: 85px;
         top: 28px;
-        width: 300px;
         height: 20px;
+        width: 215px;
 
     & > span
-      background: $black
-      position: relative;
-      box-shadow (-18px 0 0 0 $black) , 18px 0 0 0 $black;
-
-      & > span
-        position: relative;
-        z-index: 1;
-
-      &:before, &:after
-        content: ''
-        position: absolute;
-
-      &:after
-        width: 195px
-        height: 195px
-        background: #ec3434
-        border-radius: 50%
-        top: -56px;
-        left: -102px;
+      &:after // Красный круг
+        width: 196px
+        height: 196px
+        top: -57px;
+        left: -103px;
         +media('md')
           width: 76px
           height: 76px
           top: -18px;
           left: -47px;
 
-      &:before
-        width: 130px;
+      &:before // Черная полоска
+        width: 100px
         height: 5px;
-        background: #1a1616;
-        left: -16px;
-        top: 100%;
-        margin-top: 18px;
+        top: 91px;
+        left: 14px;
         +media('md')
-          margin-left: -306px;
-          margin-top: 8px;
+          content: none
 
   &__rows
+    margin-top: 115px
+    +media('md')
+      margin-top: 50px
+
     &--active
       & ^[0]__row:nth-child(n + 3)
-        visibility: visible;
-        opacity: 1
-        position: relative
-        z-index: auto;
+        display: block;
+        //visibility: visible;
+        //opacity: 1
+        //position: relative
+        //z-index: auto;
 
   &__row
     position: relative;
 
     &:nth-child(n + 3)
-      visibility: hidden;
-      opacity: 0
-      position: absolute;
-      z-index: -1
-      anim()
+      display: none;
+      //visibility: hidden;
+      //opacity: 0
+      //position: absolute;
+      //z-index: -1
+      //anim()
 
     +media('md')
       margin-bottom: 63px
@@ -126,6 +91,18 @@
         right: auto;
         left: 200px
 
+    &--full
+      & ^[0]__info
+        max-width 100%
+        padding-left: 6.5%
+
+    &--full&--reverce
+      & ^[0]__info
+        margin-left: 0
+        max-width 100%
+        padding-right: 6.5%
+
+
   //display: flex;
 
   &__info
@@ -138,6 +115,9 @@
       max-width none
       padding: 0 5px 33px
       font-size: 16px
+
+    > *
+      visibility: hidden;
 
     p
       margin-bottom: 2.7em
@@ -161,6 +141,10 @@
     top: 0
     left: 50%
     width: 50%
+    &.gallery
+      height: 100%
+      max-height 680px
+
     +media('md')
       position: static;
       left: 0
@@ -170,6 +154,7 @@
 
   &__image
     height: 100%
+    max-height 680px
     background-size: cover
     background-position: 50% 50%
 
