--- a/src/modules/moduleCourses/moduleCourses.styl
+++ b/src/modules/moduleCourses/moduleCourses.styl
@@ -6,6 +6,7 @@
     margin-bottom: 44px
 
   &__title
+    visibility: hidden;
     font-size: 60px;
     font-weight: bold;
     margin-bottom: 40px
@@ -29,6 +30,7 @@
       padding: 0
 
   &__item
+    visibility: hidden;
     margin-bottom: 14px
     +media('md')
       margin-bottom: 5px
