--- a/src/modules/popup/popup.styl
+++ b/src/modules/popup/popup.styl
@@ -26,7 +26,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(#21120a, .95)
+    background: rgba(#000, .95)
     display: flex;
     justify-content: center;
     align-items: center;
