--- a/src/modules/register/register.styl
+++ b/src/modules/register/register.styl
@@ -6,12 +6,14 @@
     margin-bottom: 60px
 
   &__price
+    visibility: hidden;
     font-size: 60px
     margin-right: 47px
     +media('md')
       font-size: 30px
 
   &__button
+    visibility: hidden;
     height: 80px
     padding: 0 42px
     border-radius: 0 40px 40px 0
