--- a/src/pug/_layout.pug
+++ b/src/pug/_layout.pug
@@ -19,7 +19,7 @@ html
     //include ../modules/photoswipe/photoswipe
     //include ../modules/popup/popup-callback
     //include ../modules/popup/popup-politic
-    //include ../modules/popup/popup-video
+    include ../modules/popup/popup-video
     //include ../modules/popup/popup-thank
 
     script.
